tests/liberr_parse/liberr_parse.exp
Error -------------------------------------------------- libs/parse_error.js:8:3

Unexpected identifier

Library parse error:
libs/parse_error.js:8
  8:   methodB: () => any
       ^^^^^^^ Unexpected identifier


Found 1 error
